.metadata/.plugins/org.eclipse.cdt.ui/h1.build.log
10:15:51 **** Incremental Build of configuration Debug for project h1 ****
make all 
Building file: ../src/h1.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/h1.d" -MT"src/h1.d" -o "src/h1.o" "../src/h1.cpp"
../src/h1.cpp:14:17: error: expected ';' at end of declaration
        double a = 1.68
                       ^
                       ;
1 error generated.
make: *** [src/h1.o] Error 1

10:15:51 Build Finished (took 385ms)

